--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -10,8 +10,8 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
-      - name: Run Super-Linter
-        uses: github/super-linter@v3
+      - name: Super-Linter
+        uses: github/super-linter@v4.9.5
         env:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
